# vuln-test

./: CMakeLists.txt  README.md  input.txt  make.sh  run.sh
data/: SS0.txt  SS1.txt  SS2.txt  SS3.txt  output.txt
include/: utils.h
src/: CMakeLists.txt  main.c  utils.c
